<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_bg"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginTop="40dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:background="@drawable/login_edit_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/login_phone"
                android:inputType="phone"
                android:paddingStart="15dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:drawableStart="@drawable/phone"
                android:background="@null"
                android:drawablePadding="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_code"
                tools:ignore="RtlHardcoded"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:background="@drawable/login_edit_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/login_password"
                android:inputType="numberPassword"
                android:password="true"
                android:paddingStart="15dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:drawableStart="@drawable/password"
                android:background="@null"
                android:drawablePadding="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                tools:ignore="RtlHardcoded"/>
        </LinearLayout>
        <Button
            android:id="@+id/login_btn"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="#FEFFFE"
            android:background="@drawable/login_btn_bg"/>
        <TextView
            android:textColor="#FF574C"
            android:drawablePadding="5dp"
            android:drawableEnd="@drawable/right_forget"
            android:layout_marginTop="20dp"
            android:layout_gravity="right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            />
    </LinearLayout>

</LinearLayout>