<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include layout="@layout/title_bar"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="148dp"
        android:background="@drawable/index_head_bg_color"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <View
                android:layout_width="68dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:background="@drawable/xu_xian"
                android:layerType="software"/>
            <TextView
                android:id="@+id/index_user_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textColor="#FFFFFF"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">
                <TextView
                    android:id="@+id/index_frg_gg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/ke_hu"
                    android:text="@string/gong_gao"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"/>
                <TextView
                    android:visibility="gone"
                    android:id="@+id/index_frg_xx"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/bell"
                    android:text="@string/xiao_xi"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"/>
                <TextView
                    android:visibility="gone"
                    android:id="@+id/index_frg_ltq"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/ye_wu"
                    android:text="@string/liao_tian_qun"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">
                <TextView
                    android:id="@+id/index_frg_ltq_o"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/ye_wu"
                    android:text="@string/liao_tian_qun"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"/>
                <TextView
                    android:visibility="gone"
                    android:id="@+id/index_frg_gg_o"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/ke_hu"
                    android:text="@string/gong_gao"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"/>
                <TextView
                    android:visibility="gone"
                    android:id="@+id/index_frg_xx_o"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/bell"
                    android:text="@string/xiao_xi"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"/>
            </LinearLayout>
        </LinearLayout>
        <View android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
    </LinearLayout>
    <FrameLayout
        android:id="@+id/index_frame_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>